--- a/conf/sys.ini
+++ b/conf/sys.ini
@@ -3,3 +3,11 @@ sys_port=38080
 sys_host=0.0.0.0
 sys_debug=True
 sys_auth=True
+[xlog]
+log_level=DEBUG
+console_log_flag=Y
+console_log_level=INFO
+file_log_flag=Y
+file_log_level=INFO
+file_log_path=/Users/henry/Desktop/01_proj/001_sett_oversea_v2/sett-api/log
+file_log_name=sett-api.log
